Fix _from_pool_v6.yaml str_split
Previously [1] we updated from_pool_v6 to use str_split but mistakenly
copy/pasting lines referencing an attribute which isn't created in
these templates.

1. I282dbc025500b1628d4f08a49b54a2adefd38b5f

Closes-Bug: 1624412
Change-Id: I409ff5b36eab2a791db4d352dea5b68096c2dc21

--- a/network/ports/external_from_pool_v6.yaml
+++ b/network/ports/external_from_pool_v6.yaml
@@ -49,4 +49,4 @@ outputs:
       - ''
       - - {get_param: [IPPool, {get_param: ExternalNetName}, {get_param: NodeIndex}]}
         - '/'
-        - {str_split: ['/', {get_attr: [ExternalPort, subnets, 0, cidr]}, 1]}
+        - {str_split: ['/', {get_param: ExternalNetCidr}, 1]}
