--- a/network/ports/internal_api_from_pool_v6.yaml
+++ b/network/ports/internal_api_from_pool_v6.yaml
@@ -49,4 +49,4 @@ outputs:
       - ''
       - - {get_param: [IPPool, {get_param: InternalApiNetName}, {get_param: NodeIndex}]}
         - '/'
-        - {str_split: ['/', {get_attr: [InternalApiPort, subnets, 0, cidr]}, 1]}
+        - {str_split: ['/', {get_param: InternalApiNetCidr}, 1]}
