--- a/network/ports/management_from_pool_v6.yaml
+++ b/network/ports/management_from_pool_v6.yaml
@@ -49,4 +49,4 @@ outputs:
       - ''
       - - {get_param: [IPPool, {get_param: ManagementNetName}, {get_param: NodeIndex}]}
         - '/'
-        - {str_split: ['/', {get_attr: [ManagementPort, subnets, 0, cidr]}, 1]}
+        - {str_split: ['/', {get_param: ManagementNetCidr}, 1]}
