--- a/network/ports/tenant_from_pool_v6.yaml
+++ b/network/ports/tenant_from_pool_v6.yaml
@@ -48,4 +48,4 @@ outputs:
       - ''
       - - {get_param: [IPPool, {get_param: TenantNetName}, {get_param: NodeIndex}]}
         - '/'
-        - {str_split: ['/', {get_attr: [TenantPort, subnets, 0, cidr]}, 1]}
+        - {str_split: ['/', {get_param: TenantNetCidr}, 1]}
