Include ceilometer in swift proxy pipeline
new ceilometermiddleware is available and integrated into
puppet-swift. Lets leverage it and include it in the
swift proxy pipeline. The correcponding puppet triple
change for this is Ie49f4a750368ff174b23b8d6baa743d0956d727e

Closes-Bug: #1631108

Change-Id: I82da0240d60d1eed54f1c0927e6157bb63025a19
(cherry picked from commit f1b509c8c856532a87b533cebf7ab8430393bf5c)

--- a/puppet/services/swift-proxy.yaml
+++ b/puppet/services/swift-proxy.yaml
@@ -41,6 +41,14 @@ parameters:
   MonitoringSubscriptionSwiftProxy:
     default: 'overcloud-swift-proxy'
     type: string
+  RabbitPassword:
+    description: The password for RabbitMQ
+    type: string
+    hidden: true
+  RabbitUserName:
+    default: guest
+    description: The username for RabbitMQ
+    type: string
 
 resources:
   SwiftBase:
@@ -66,6 +74,9 @@ outputs:
             swift::proxy::authtoken::project_name: 'service'
             swift::proxy::node_timeout: {get_param: SwiftProxyNodeTimeout}
             swift::proxy::workers: {get_param: SwiftWorkers}
+            swift::proxy::ceilometer::rabbit_host: {get_param: [ServiceNetMap, RabbitmqNetwork]}
+            swift::proxy::ceilometer::rabbit_user: {get_param: RabbitUserName}
+            swift::proxy::ceilometer::rabbit_password: {get_param: RabbitPassword}
             tripleo.swift_proxy.firewall_rules:
               '122 swift proxy':
                 dport:
@@ -77,6 +88,7 @@ outputs:
               - ResellerAdmin
             swift::proxy::versioned_writes::allow_versioned_writes: true
             swift::proxy::pipeline:
+              - 'ceilometer'
               - 'catch_errors'
               - 'healthcheck'
               - 'proxy-logging'
