Use correct password for keystone bootstrap
In upstream puppet-keystone, the boostrap process should use an admin
password not the admin token for the bootstrapping of keystone. The
admin password option is being added to the upstream class so we will
need to provide it to properly have keystone bootstrapped.

Change-Id: Icab4b0cb70d6caf2f2792c4fe730f060b807fbc1
Depends-On: I7a706d93b43ec025bdb4b29667f64ff2f7dd52a0
Related-Bug: #1621959
(cherry picked from commit 333f6b322765100f2d2fb9d9f4b8426a9a8dde45)

--- a/puppet/services/keystone.yaml
+++ b/puppet/services/keystone.yaml
@@ -130,6 +130,7 @@ outputs:
                   - {get_param: [EndpointMap, MysqlInternal, host]}
                   - '/keystone'
             keystone::admin_token: {get_param: AdminToken}
+            keystone::admin_password: {get_param: AdminPassword}
             keystone::roles::admin::password: {get_param: AdminPassword}
             keystone_ssl_certificate: {get_param: KeystoneSSLCertificate}
             keystone_ssl_certificate_key: {get_param: KeystoneSSLCertificateKey}
