Define step input as a Number type
Currently we pass numbers in (hard-coded in post.j2.yaml) but the
SoftwareConfig schema defaults to String.  If puppet requires an
integer number, setting this type may help preserve the type for
the hook.

Change-Id: Ie9227d7adb58ea3c791aa459a1ab5b17ad935919

--- a/puppet/blockstorage-config.yaml
+++ b/puppet/blockstorage-config.yaml
@@ -24,6 +24,9 @@ resources:
         enable_hiera: True
         enable_facter: False
         modulepath: /etc/puppet/modules:/opt/stack/puppet-modules:/usr/share/openstack-puppet/modules
+      inputs:
+      - name: step
+        type: Number
       outputs:
       - name: result
       config:
