--- a/puppet/controller-config.yaml
+++ b/puppet/controller-config.yaml
@@ -26,6 +26,9 @@ resources:
         modulepath: /etc/puppet/modules:/opt/stack/puppet-modules:/usr/share/openstack-puppet/modules
       outputs:
       - name: result
+      inputs:
+      - name: step
+        type: Number
       config:
         list_join:
         - ''
