--- a/puppet/cephstorage-config.yaml
+++ b/puppet/cephstorage-config.yaml
@@ -24,6 +24,9 @@ resources:
         enable_hiera: True
         enable_facter: False
         modulepath: /etc/puppet/modules:/opt/stack/puppet-modules:/usr/share/openstack-puppet/modules
+      inputs:
+      - name: step
+        type: Number
       outputs:
       - name: result
       config:
