Add metricd workers support in gnocchi
Depending on the environment, gnocchi workers
uses several controller resources RAM/CPU,
this option makes it configurable.

Also, configured to 1 in environments/low-memory-usage.yaml
which will reduce the service footprint in i.e. CI

Change-Id: Ia008b32151f4d8fec586cf89994ac836751b7cce
Closes-bug: #1626473

--- a/environments/low-memory-usage.yaml
+++ b/environments/low-memory-usage.yaml
@@ -9,6 +9,7 @@ parameter_defaults:
   NovaWorkers: 1
   SaharaWorkers: 1
   SwiftWorkers: 1
+  GnocchiMetricdWorkers: 1
 
   ApacheMaxRequestWorkers: 32
   ApacheServerLimit: 32
