--- a/puppet/services/gnocchi-metricd.yaml
+++ b/puppet/services/gnocchi-metricd.yaml
@@ -21,6 +21,10 @@ parameters:
   MonitoringSubscriptionGnocchiMetricd:
     default: 'overcloud-gnocchi-metricd'
     type: string
+  GnocchiMetricdWorkers:
+    default: ''
+    description: Number of workers for Gnocchi MetricD
+    type: string
 
 resources:
   GnocchiServiceBase:
@@ -39,5 +43,6 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [GnocchiServiceBase, role_data, config_settings]
+          - gnocchi::metricd::workers: {get_param: GnocchiMetricdWorkers}
       step_config: |
         include ::tripleo::profile::base::gnocchi::metricd
