--- a/environments/major-upgrade-aodh-migration.yaml
+++ b/environments/major-upgrade-aodh-migration.yaml
@@ -3,8 +3,4 @@ resource_registry:
   OS::TripleO::Tasks::UpdateWorkflow: ../extraconfig/tasks/mitaka_to_newton_aodh_data_migration.yaml
 
   # no-op the rest
-  OS::TripleO::ControllerPostDeployment: OS::Heat::None
-  OS::TripleO::ComputePostDeployment: OS::Heat::None
-  OS::TripleO::ObjectStoragePostDeployment: OS::Heat::None
-  OS::TripleO::BlockStoragePostDeployment: OS::Heat::None
-  OS::TripleO::CephStoragePostDeployment: OS::Heat::None
+  OS::TripleO::PostDeploySteps: OS::Heat::None
