--- a/environments/major-upgrade-pacemaker.yaml
+++ b/environments/major-upgrade-pacemaker.yaml
@@ -3,8 +3,4 @@ parameter_defaults:
 
 resource_registry:
   OS::TripleO::Tasks::UpdateWorkflow: ../extraconfig/tasks/major_upgrade_pacemaker.yaml
-  OS::TripleO::ControllerPostDeployment: OS::Heat::None
-  OS::TripleO::ComputePostDeployment: OS::Heat::None
-  OS::TripleO::ObjectStoragePostDeployment: OS::Heat::None
-  OS::TripleO::BlockStoragePostDeployment: OS::Heat::None
-  OS::TripleO::CephStoragePostDeployment: OS::Heat::None
+  OS::TripleO::PostDeploySteps: OS::Heat::None
