Deprecate the NeutronL3HA parameter
NeutronL3HA used to be enabled by the tripleoclient if the controller
count > 1. This functionality has been moved into the relevant heat
template, making the parameter less valuable for general use. If
necessary, deployers can override the automatic behavior through extra
config.

Change-Id: Id5bb5070b9627fd545357acc9ef51bdc69d10551
Related-Bug: #1623155

--- a/puppet/services/neutron-api.yaml
+++ b/puppet/services/neutron-api.yaml
@@ -37,13 +37,6 @@ parameters:
     default: 'True'
     description: Allow automatic l3-agent failover
     type: string
-  NeutronL3HA:
-    default: false
-    description: |
-      Whether to enable HA for virtual routers. While the default value is
-      'false', L3 HA will be automatically enabled if the number of nodes hosting
-      controller configurations and DVR is disabled.
-    type: boolean
   NovaPassword:
     description: The password for the nova service and db account, used by nova-api.
     type: string
@@ -71,6 +64,29 @@ parameters:
       template to be used in environments that do not override it.
     default: 1
     type: number
+
+  # DEPRECATED: the following options are deprecated and are currently maintained
+  # for backwards compatibility. They will be removed in the Ocata cycle.
+  NeutronL3HA:
+    default: false
+    description: |
+      Whether to enable HA for virtual routers. While the default value is
+      'false', L3 HA will be automatically enabled if the number of nodes
+      hosting controller configurations and DVR is disabled. This parameter is
+      being deprecated in Newton and is scheduled to be removed in Ocata.
+      Future releases will enable L3 HA by default if it is appropriate for the
+      deployment type. Alternate mechanisms will be available to override.
+    type: boolean
+
+parameter_groups:
+- label: deprecated
+  description: |
+   The following parameters are deprecated and will be removed. They should not
+   be relied on for new deployments. If you have concerns regarding deprecated
+   parameters, please contact the TripleO development team on IRC or the
+   OpenStack mailing list.
+  parameters:
+  - NeutronL3HA
 
 resources:
 
