explicitly set fluentd service_provider
the konstantin-fluentd package assumes sysv init scripts, while the
fluentd package in rhel(/centos/fedora) uses systemd.  this can cause
errors starting the service.

This review explicitly sets the service_provider to "systemd".

This requires https://github.com/soylent/konstantin-fluentd/pull/15, which exposes the service_provider parameter in konstantin-fluentd.

Change-Id: I24332203de33f56a0e49fcc15f7fb7bb576e8752

--- a/puppet/services/logging/fluentd-base.yaml
+++ b/puppet/services/logging/fluentd-base.yaml
@@ -33,4 +33,5 @@ outputs:
         fluentd::config_group: fluentd
         fluentd::config_path: /etc/fluentd/config.d
         fluentd::plugin_provider: yum
+        fluentd::service_provider: systemd
         fluentd::repo_install: false
