--- a/environments/hyperconverged-ceph.yaml
+++ b/environments/hyperconverged-ceph.yaml
@@ -1,9 +1,8 @@
-# If using an isolated StorageMgmt network, this will have to be uncommented to
-# plug the network on the compute nodes as well.
-#resource_registry:
-#    OS::TripleO::Compute::Ports::StorageMgmtPort: ../network/ports/storage_mgmt.yaml
+# If not using an isolated StorageMgmt network, the following regitry mapping
+# should be commented.
+resource_registry:
+  OS::TripleO::Compute::Ports::StorageMgmtPort: ../network/ports/storage_mgmt.yaml
 
-# Should match the default list of services for the compute node plus CephOSD
 parameter_defaults:
   ComputeServices:
     - OS::TripleO::Services::CephOSD
