--- a/puppet/services/pacemaker/database/mysql.yaml
+++ b/puppet/services/pacemaker/database/mysql.yaml
@@ -35,6 +35,13 @@ outputs:
     value:
       service_name: mysql
       config_settings:
-        get_attr: [MysqlBase, role_data, config_settings]
+        map_merge:
+          - get_attr: [MysqlBase, role_data, config_settings]
+          - tripleo::profile::pacemaker::database::mysql::bind_address:
+              str_replace:
+                template:
+                  '"%{::fqdn_$NETWORK}"'
+                params:
+                  $NETWORK: {get_param: [ServiceNetMap, MysqlNetwork]}
       step_config: |
         include ::tripleo::profile::pacemaker::database::mysql
