Replace per role manifests with a common role manifest
This removes the (nearly empty) per role manifests, and
replaces them with a generic manifest, where we use str_replace
to substitute the role name at runtime (or in some cases a
subset of the name for backwards compatibility)

Change-Id: I79da0f523189959b783bbcbb3b0f37be778e02fe
Partial-Bug: #1626976
(cherry picked from commit b3c73a7e9924037ab29aff547b3096c8f5fb1a62)

--- a/puppet/controller-config.yaml
+++ b/puppet/controller-config.yaml
@@ -1,7 +1,7 @@
 heat_template_version: 2015-04-30
 
 description: >
-  A software config which runs manifests/overcloud_controller.pp
+  A software config which runs puppet on the controller role
 
 parameters:
   ConfigDebug:
@@ -32,10 +32,13 @@ resources:
       config:
         list_join:
         - ''
-        - - get_file: manifests/overcloud_controller.pp
+        - - str_replace:
+              template: {get_file: manifests/overcloud_role.pp}
+              params:
+                __ROLE__: controller
           - {get_param: StepConfig}
 
 outputs:
   OS::stack_id:
-    description: The software config which runs overcloud_controller.pp
+    description: The software config which runs puppet on the controller role
     value: {get_resource: ControllerPuppetConfigImpl}
