--- a/puppet/compute-config.yaml
+++ b/puppet/compute-config.yaml
@@ -1,7 +1,7 @@
 heat_template_version: 2015-04-30
 
 description: >
-  A software config which runs manifests/overcloud_compute.pp
+  A software config which applies puppet on the compute role
 
 parameters:
   ConfigDebug:
@@ -32,10 +32,13 @@ resources:
       config:
         list_join:
         - ''
-        - - get_file: manifests/overcloud_compute.pp
+        - - str_replace:
+              template: {get_file: manifests/overcloud_role.pp}
+              params:
+                __ROLE__: compute
           - {get_param: StepConfig}
 
 outputs:
   OS::stack_id:
-    description: The software config which runs overcloud_controller.pp
+    description: The software config which applies puppet on the compute role
     value: {get_resource: ComputePuppetConfigImpl}
