--- a/extraconfig/all_nodes/swap.j2.yaml
+++ b/extraconfig/all_nodes/swap.j2.yaml
@@ -50,7 +50,7 @@ resources:
     type: OS::Heat::SoftwareDeploymentGroup
     properties:
       config: {get_resource: SwapConfig}
-      servers: {get_param: servers, {{role.name}}}
+      servers: {get_param: [servers, {{role.name}}]}
       input_values:
         swap_size_megabytes: {get_param: swap_size_megabytes}
         swap_path: {get_param: swap_path}
