--- a/extraconfig/all_nodes/swap-partition.j2.yaml
+++ b/extraconfig/all_nodes/swap-partition.j2.yaml
@@ -37,7 +37,7 @@ resources:
     type: OS::Heat::SoftwareDeploymentGroup
     properties:
       config: {get_resource: SwapConfig}
-      servers: {get_param: servers, {{role.name}}}
+      servers: {get_param: [servers, {{role.name}}]}
       input_values:
         swap_partition_label: {get_param: swap_partition_label}
       actions: ["CREATE"]
