--- a/environments/neutron-opendaylight-l3.yaml
+++ b/environments/neutron-opendaylight-l3.yaml
@@ -2,8 +2,8 @@
 resource_registry:
   OS::TripleO::Services::NeutronOvsAgent: OS::Heat::None
   OS::TripleO::Services::ComputeNeutronOvsAgent: OS::Heat::None
-  OS::TripleO::Services::OpenDaylight: puppet/services/opendaylight-api.yaml
-  OS::TripleO::Services::OpenDaylightOvs: puppet/services/opendaylight-ovs.yaml
+  OS::TripleO::Services::OpenDaylight: ../puppet/services/opendaylight-api.yaml
+  OS::TripleO::Services::OpenDaylightOvs: ../puppet/services/opendaylight-ovs.yaml
   OS::TripleO::Services::NeutronL3Agent: OS::Heat::None
 
 parameter_defaults:
